# SkyWall

./: .gitignore  CMakeLists.txt  README.md  architecture.md  optimisation_options.md  roadmap.md
.github/workflows/: ci.yml
src/engine/: Board.cpp  Board.h  GameEngine.cpp  GameEngine.h  PlayerProcess.cpp  PlayerProcess.hpp  Renderer.cpp  Renderer.h  main.cpp
src/ipc/: PipeComm.cpp  PipeComm.hpp  Serializer.cpp  Serializer.hpp
src/player/: PlayerRunner.cpp  PlayerRunner.hpp  player.cpp
src/shared/: Constants.h  Types.h
tests/: test_Board.cpp  test_PipeComm.cpp  test_PlayerProcess.cpp  test_Serializer.cpp  test_player.cpp
